[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = "kuhl-haus-canary"
version = "0.1.0"
description = "Simple canary and site monitoring service"
authors = [
  { name = "Tom Pounders", email = "git@oldschool.engineer" },
]
readme = "README.rst"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "kuhl-haus-metrics"
]

[project.urls]
Homepage = "https://github.com/kuhl-haus/kuhl-haus-canary"
Documentation = "https://github.com/kuhl-haus/kuhl-haus-canary/wiki"
Source = "https://github.com/kuhl-haus/kuhl-haus-canary"
Changelog = "https://github.com/kuhl-haus/kuhl-haus-canary/commits"
Tracker = "https://github.com/kuhl-haus/kuhl-haus-canary/issues"

[project.optional-dependencies]
testing = [
    "setuptools",
    "pytest",
    "pytest-cov"
]

# [project.scripts]
# command-name = "kuhl_haus.canary.module:function"

[tool.setuptools]
zip-safe = true
include-package-data = true
package-dir = {"" = "src"}
packages = {find = {where = ["src"], exclude = ["tests"]}}

[tool.pytest.ini_options]
addopts = "--verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.devpi.upload]
no_vcs = 1
formats = ["bdist_wheel"]

[tool.flake8]
max_line_length = 88
extend_ignore = ["E203", "W503"]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.pyscaffold]
version = "4.6"
package = "canary"
extensions = ["namespace"]
namespace = "kuhl_haus"
