[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "kuhl-haus-canary"
version = "0.2.0"
description = "Simple canary and site monitoring service"
authors = [
    { name = "Tom Pounders", email = "git@oldschool.engineer" },
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "kuhl-haus-metrics @ git+https://github.com/kuhl-haus/kuhl-haus-metrics.git@v0.2.0",
    "uvicorn~=0.34.0",
    "fastapi~=0.115.11",
    "boto3~=1.37.5",
    "numpy~=2.2.3",
    "requests~=2.32.3",
    "tiktoken~=0.9.0",
    "botocore~=1.37.5",
    "pydantic~=2.10.6",
    "importlib_metadata~=8.6.1",
    "dataclasses~=0.6",
    "dataclasses-json~=0.6.7",
    "dnspython~=2.7.0",
    "pyOpenSSL~=25.0.0",
    "importlib-metadata~=8.6.1",
    "setuptools~=75.8.2",
    "pytest~=8.3.5",
    "pytest-cov~=6.0.0",
]

[project.urls]
Homepage = "https://github.com/kuhl-haus/kuhl-haus-canary"
Documentation = "https://github.com/kuhl-haus/kuhl-haus-canary/wiki"
Source = "https://github.com/kuhl-haus/kuhl-haus-canary"
Changelog = "https://github.com/kuhl-haus/kuhl-haus-canary/commits"
Tracker = "https://github.com/kuhl-haus/kuhl-haus-canary/issues"

[project.optional-dependencies]
testing = [
    "setuptools~=76.1.0",
    "pytest~=8.3.5",
    "pytest-cov~=6.0.0",
]

# [project.scripts]
# command-name = "kuhl_haus.canary.module:function"

[tool.setuptools]
zip-safe = true
include-package-data = true
package-dir = {"" = "src"}
packages = {find = {where = ["src"], exclude = ["tests"]}}

[tool.pytest.ini_options]
addopts = ["--verbose"]
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.devpi.upload]
no_vcs = 1
formats = ["bdist_wheel"]

[tool.flake8]
max_line_length = 88
extend_ignore = ["E203", "W503"]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.pyscaffold]
version = "4.6"
package = "canary"
extensions = ["namespace"]
namespace = "kuhl_haus"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
includes = ["src/kuhl_haus"]